@@ -25,7 +25,7 @@ repositories {
 
 dependencies {
     // dependencies
-    compile group: 'com.google.inject', name: 'guice', version: '4.1.0'
+    compile group: 'com.google.inject', name: 'guice', version: '4.2.3'
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8'
     implementation 'com.google.guava:guava:29.0-jre'
@@ -41,7 +41,8 @@ dependencies {
 application {
     // Define the main class for the application.
     mainClassName = 'james.rpn.calculator.app.Main'
-    applicationDefaultJvmArgs = ["-Dlog4j2.configuration=log4j2.properties"]
+    applicationDefaultJvmArgs = ["-Dlog4j2.configuration=log4j2.properties", 
+        "--illegal-access=warn"]
 }
 
 test {
